# rdp_relative_mouse

./: .gitignore  CMakeLists.txt  MouseLoop.cpp  RelativeMove.cpp  ScreenMetric.cpp  ScreenMetric.h  calibrate.cpp  changelog.md  config.h  main.cpp  mouse_info.cpp  readme-en.md  readme.md
